feat: support resource authorizations migration